refactor: Collectors.toList() => toList() 로 변경 (불변 리스트)